# AudioClipFactory.py

./: README.md  pyproject.toml
audioclip_factory/: __init__.py  audio_clip_factory.py
