[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audioclip-factory"
version = "0.1.0"
description = "A simple factory for creating AudioClip objects in MoviePy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Hao Nghiem", email = "qtvhao@gmail.com" }
]
dependencies = [
    "moviepy>=2.1.2,<3.0"
]
keywords = ["audio", "moviepy", "audioclip", "factory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/qtvhao/AudioClipFactory.py"
Repository = "https://github.com/qtvhao/AudioClipFactory.py"

[tool.setuptools]
packages = ["audioclip_factory"]

[project.scripts]
audioclip-factory = "audioclip_factory.cli:main"
